src/components/sbb-footer/sbb-footer.scss
@use '../../global/styles' as sbb;

// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin
@include sbb.host-component-properties;

:host {
  --sbb-footer-gap-horizontal: var(--sbb-grid-base-gutter-responsive);
  --sbb-footer-gap-vertical: var(--sbb-spacing-responsive-l);
  --sbb-footer-background-color: var(--sbb-color-milk-default);
  --sbb-footer-clock-width: #{sbb.px-to-rem-build(76)};

  @include sbb.mq($from: small) {
    --sbb-footer-clock-width: #{sbb.px-to-rem-build(112)};
  }
}

:host([negative]:not([negative='false'])) {
  --sbb-footer-background-color: var(--sbb-color-charcoal-default);
}

.sbb-footer {
  padding-block: var(--sbb-spacing-responsive-l);
  background-color: var(--sbb-footer-background-color);
}

.sbb-footer-wrapper {
  /* stylelint-disable-next-line plugin/stylelint-bem-namics */
  :host(:not([expanded]:not([expanded='false']))) & {
    @include sbb.page-spacing;
  }

  :host([expanded]:not([expanded='false'])) & {
    @include sbb.page-spacing-expanded;
  }
}

.sbb-footer__title {
  @include sbb.screen-reader-only;
}

::slotted(.sbb-link-list-button-group) {
  display: flex;
  flex-direction: column;
  gap: var(--sbb-spacing-fixed-6x);
  align-items: flex-start;
}

:host([variant='clock-columns']) {
  // Content
  slot {
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: auto;
    column-gap: var(--sbb-footer-gap-horizontal);

    @include sbb.mq($from: small) {
      grid-template-columns: calc(50% - (var(--sbb-footer-gap-horizontal) / 2));
    }

    @include sbb.mq($from: wide) {
      max-width: var(--sbb-footer-content-max-width);
      margin-inline-start: auto;
      margin-inline-end: auto;
      grid-template-columns: repeat(4, 1fr);
    }
  }

  ::slotted(*:not(:last-child, sbb-divider)) {
    margin-block-end: var(--sbb-footer-gap-vertical);
  }

  ::slotted(sbb-clock) {
    max-width: var(--sbb-footer-clock-width);
    grid-row: 1;

    @include sbb.mq($from: small) {
      align-self: start;
      grid-row: 2;
    }

    @include sbb.mq($from: wide) {
      grid-row: 1;
      grid-column: 4 / 5;
      width: 100%;
      justify-self: start;
    }
  }

  ::slotted(sbb-divider) {
    margin-block-start: calc(var(--sbb-spacing-responsive-xl) - var(--sbb-footer-gap-vertical));
    margin-block-end: var(--sbb-spacing-responsive-s);

    @include sbb.mq($from: small) {
      grid-row: 3;
      grid-column: 1 / 4;
      width: 100%;
    }

    @include sbb.mq($from: wide) {
      grid-row: 2;
    }
  }

  @include sbb.mq($from: small) {
    ::slotted(:nth-child(-n + 2)) {
      grid-row: 1;
    }

    ::slotted(:nth-child(3)),
    ::slotted(:nth-child(4)) {
      grid-row: 2;
    }

    ::slotted(*:last-child) {
      grid-row: 4;
    }
  }

  @include sbb.mq($from: large) {
    ::slotted(*:last-child) {
      grid-column: 1 / 4;
    }
  }

  @include sbb.mq($from: wide) {
    ::slotted(:nth-child(-n + 4)) {
      grid-row: 1;
    }

    ::slotted(*:last-child) {
      grid-row: 3;
    }

    ::slotted(sbb-divider),
    ::slotted(*:last-child) {
      grid-column: 1 / 5;
    }
  }
}

